--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -16,22 +16,47 @@
             android:layout_height="wrap_content" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:boxStrokeColor="@color/white"
-            app:hintTextColor="@color/white"
-            android:layout_margin="8dp"
-            android:padding="8dp"
-            android:hint="Código producto">
+            style="@style/Widget.App.TextInputLayout.Form"
+            android:hint="@string/codigo_producto">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_codigo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/Widget.App.TextInputEditText.Form"
+                android:id="@+id/etCodigoArticulo"
                 android:inputType="number"
-                android:maxLength="4"
-                android:textColor="@color/white" />
+                android:maxLength="4" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.App.TextInputLayout.Form"
+            android:hint="Nombre artículo">
+
+            <com.google.android.material.textfield.TextInputEditText
+                style="@style/Widget.App.TextInputEditText.Form"
+                android:id="@+id/etNombreArticulo"
+                android:inputType="text"
+                android:maxLength="40" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.App.TextInputLayout.Form"
+            android:hint="Precio Artículo">
+
+            <com.google.android.material.textfield.TextInputEditText
+                style="@style/Widget.App.TextInputEditText.Form"
+                android:id="@+id/etPrecioArticulo"
+                android:inputType="number"
+                android:maxLength="20" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.App.TextInputLayout.Form"
+            android:hint="Cantidad">
+
+            <com.google.android.material.textfield.TextInputEditText
+                style="@style/Widget.App.TextInputEditText.Form"
+                android:id="@+id/etCantidadProducto"
+                android:inputType="number"
+                android:maxLength="4" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
