--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,14 @@
         <item name="android:layout_margin">8dp</item>
         <item name="android:padding">8dp</item>
 
-        <item name="boxStrokeColor">@color/white</item>
+        <item name="boxStrokeColor">@color/box_stroke_color</item>
         <item name="hintTextColor">@color/white</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="boxStrokeWidthFocused">2dp</item>
         <item name="android:textColorHint">@color/white</item>
     </style>
 
-    <style name="Widget.App.TextInputEditText.Form">
+    <style name="Widget.App.TextInputEditText.Form" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
