--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/addProductFragment"
-        android:name="com.appmovil.inventorywidget.view.fragment.addProduct"
+        android:name="com.appmovil.inventorywidget.view.fragment.AddProduct"
         android:label="fragment_add_product"
         tools:layout="@layout/fragment_add_product"
         />
