--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -21,7 +21,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 style="@style/Widget.App.TextInputEditText.Form"
-                android:id="@+id/etCodigoArticulo"
+                android:id="@+id/etProductCode"
                 android:inputType="number"
                 android:maxLength="4" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -32,7 +32,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 style="@style/Widget.App.TextInputEditText.Form"
-                android:id="@+id/etNombreArticulo"
+                android:id="@+id/etProductName"
                 android:inputType="text"
                 android:maxLength="40" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -43,7 +43,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 style="@style/Widget.App.TextInputEditText.Form"
-                android:id="@+id/etPrecioArticulo"
+                android:id="@+id/etproductPrice"
                 android:inputType="number"
                 android:maxLength="20" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -54,20 +54,21 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 style="@style/Widget.App.TextInputEditText.Form"
-                android:id="@+id/etCantidadProducto"
+                android:id="@+id/etProductQuantity"
                 android:inputType="number"
                 android:maxLength="4" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btnGuardar"
+            android:id="@+id/btnSave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Guardar"
+            android:text="@string/guardar"
             android:textSize="16sp"
             android:backgroundTint="#E6502D"
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="16dp"
+            android:enabled="false"
             app:layout_constraintTop_toBottomOf="@+id/btnFragmentRecycler"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
