--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,15 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/addProductFragment" >
-    <!--    CAMBIAR A LA HOME -->
+    app:startDestination="@id/inventoryFragment">
+
+    <fragment
+        android:id="@+id/inventoryFragment"
+        android:name="com.appmovil.inventorywidget.view.fragment.InventoryFragment"
+        android:label="fragment_inventory"
+        tools:layout="@layout/fragment_inventory">
+        <action
+            android:id="@+id/action_inventoryFragment_to_addProductFragment"
+            app:destination="@id/addProductFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/addProductFragment"
         android:name="com.appmovil.inventorywidget.view.fragment.AddProduct"
         android:label="fragment_add_product"
-        tools:layout="@layout/fragment_add_product"
-        />
-
+        tools:layout="@layout/fragment_add_product" />
     <!-- TODO: AÑADIR ACTIONS CUANDO SE TENGA EL RESTO DE PANELES, AL HOME AL RETROCEDER Y GUARDAR -->
 </navigation>
