--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#CC000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#424242</color>
+    <color name="bg_red">#FF6647</color>
 </resources>
