--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#CC000000</color>
+    <color name="black_80">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#424242</color>
     <color name="bg_red">#FF6647</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
