--- a/app/src/main/res/layout/item_inventory.xml
+++ b/app/src/main/res/layout/item_inventory.xml
@@ -33,6 +33,7 @@
                     android:text="Zapatos"
                     android:padding="5dp"
                     android:textSize="16sp"
+                    android:textStyle="bold"
                     card_view:layout_constraintTop_toTopOf="parent"
                     card_view:layout_constraintStart_toStartOf="parent"/>
 
@@ -40,19 +41,21 @@
                     android:id="@+id/tvPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/holo_red_dark"
+                    android:textColor="@color/bg_red"
                     android:text="$15.000"
                     android:padding="5dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     card_view:layout_constraintTop_toTopOf="parent"
-                    card_view:layout_constraintEnd_toEndOf="parent"/>
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    />
 
                 <TextView
                     android:id="@+id/tvQuantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="ID: 5"
+                    android:text="Id: 5"
                     android:padding="5dp"
                     android:textSize="16sp"
                     card_view:layout_constraintTop_toBottomOf="@+id/tvName"
