--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,8 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/inventoryFragment">
+    app:startDestination="@id/loginFragment">
 
+    <!-- Login -->
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.appmovil.inventorywidget.view.fragment.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_loginFragment_to_inventoryFragment"
+            app:destination="@id/inventoryFragment" />
+    </fragment>
+
+    <!-- Inventario principal -->
     <fragment
         android:id="@+id/inventoryFragment"
         android:name="com.appmovil.inventorywidget.view.fragment.InventoryFragment"
@@ -15,10 +27,11 @@
             app:destination="@id/addProductFragment" />
     </fragment>
 
+    <!-- Agregar producto -->
     <fragment
         android:id="@+id/addProductFragment"
         android:name="com.appmovil.inventorywidget.view.fragment.AddProduct"
         android:label="fragment_add_product"
         tools:layout="@layout/fragment_add_product" />
-    <!-- TODO: AÑADIR ACTIONS CUANDO SE TENGA EL RESTO DE PANELES, AL HOME AL RETROCEDER Y GUARDAR -->
+
 </navigation>
