--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -34,4 +34,28 @@
         android:label="fragment_add_product"
         tools:layout="@layout/fragment_add_product" />
 
+    <!-- Ver producto -->
+    <fragment
+        android:id="@+id/detailProductFragment"
+        android:name="com.appmovil.inventorywidget.view.fragment.DetailProductFragment"
+        android:label="Detalle del producto"
+        tools:layout="@layout/fragment_detail_product">
+
+        <!-- Argumento que recibirá el fragmento -->
+        <argument
+            android:name="product"
+            app:argType="com.appmovil.inventorywidget.model.Product" />
+
+        <action
+            android:id="@+id/action_detailProductFragment_to_inventoryFragment"
+            app:destination="@id/inventoryFragment" />
+
+        <action
+            android:id="@+id/action_detailProductFragment_to_addProductFragment"
+            app:destination="@id/addProductFragment" />
+    </fragment>
+
+
+
+
 </navigation>
