--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -22,17 +22,29 @@
         android:name="com.appmovil.inventorywidget.view.fragment.InventoryFragment"
         android:label="fragment_inventory"
         tools:layout="@layout/fragment_inventory">
+
         <action
             android:id="@+id/action_inventoryFragment_to_addProductFragment"
             app:destination="@id/addProductFragment" />
+
+        <action
+            android:id="@+id/action_inventoryFragment_to_detailProductFragment"
+            app:destination="@id/detailProductFragment" />
     </fragment>
+
 
     <!-- Agregar producto -->
     <fragment
         android:id="@+id/addProductFragment"
         android:name="com.appmovil.inventorywidget.view.fragment.AddProduct"
         android:label="fragment_add_product"
-        tools:layout="@layout/fragment_add_product" />
+        tools:layout="@layout/fragment_add_product">
+
+        <argument
+            android:name="product"
+            app:argType="com.appmovil.inventorywidget.model.Product"
+            app:nullable="true" />
+    </fragment>
 
     <!-- Ver producto -->
     <fragment
