--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -8,12 +8,12 @@
     <!-- Bloque Izquierdo: Icono y Título -->
     <ImageView
         android:id="@+id/ivIcon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="65dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:contentDescription="App Logo"
-        android:src="@drawable/temporal_icon" />
+        android:src="@drawable/app_icon" />
 
     <TextView
         android:id="@+id/tvInventoryLabel"
