--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#424242</color>
     <color name="bg_red">#FF6647</color>
+    <color name="dark_gunmetal">#1E282D</color>
     <color name="transparent">#00FFFFFF</color>
 </resources>
