--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     tools:context=".view.fragment.LoginFragment">
+
 
     <!-- ANIMACIÓN INVENTORY -->
     <com.airbnb.lottie.LottieAnimationView
@@ -22,7 +25,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- CONTENEDOR DE CAMPOS -->
+    <!-- CONTENEDOR -->
     <LinearLayout
         android:id="@+id/containerFields"
         android:layout_width="0dp"
@@ -34,12 +37,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- CAMPO EMAIL -->
+        <!-- EMAIL -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:hint="Email"
             app:boxBackgroundColor="@android:color/transparent"
             app:hintTextColor="@color/white"
@@ -50,13 +52,13 @@
                 android:id="@+id/edtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:inputType="textEmailAddress"
                 android:maxLength="40"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- CAMPO PASSWORD -->
+        <!-- PASSWORD -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputPassword"
             android:layout_width="match_parent"
@@ -66,7 +68,7 @@
             app:hintTextColor="@color/white"
             app:boxStrokeColor="@color/white"
             app:boxStrokeWidthFocused="2dp"
-            app:startIconDrawable="@drawable/ic_eye_open"
+            app:startIconDrawable="@drawable/ic_eye_close"
             app:startIconTint="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -77,10 +79,9 @@
                 android:maxLength="10"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"/>
-
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- TEXTO DE ERROR -->
+        <!-- ERROR -->
         <TextView
             android:id="@+id/txtPasswordError"
             android:layout_width="wrap_content"
@@ -106,7 +107,7 @@
 
     </LinearLayout>
 
-    <!-- BOTÓN REGISTRARSE (como texto) -->
+    <!-- REGISTRO -->
     <TextView
         android:id="@+id/btnGoRegister"
         android:layout_width="wrap_content"
@@ -120,4 +121,5 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
 
