--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,25 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="#0F0F0F"
     android:clickable="true"
     android:focusableInTouchMode="true"
     tools:context=".view.fragment.LoginFragment">
 
 
-    <!-- ANIMACIÓN INVENTORY -->
-    <com.airbnb.lottie.LottieAnimationView
+    <!-- IMAGEN INVENTORY -->
+    <ImageView
         android:id="@+id/inventoryImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="32dp"
-        app:lottie_rawRes="@raw/inventory"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_cacheComposition="true"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="80dp"
+        android:src="@drawable/app_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <!-- CONTENEDOR -->
     <LinearLayout
@@ -68,8 +66,9 @@
             app:hintTextColor="@color/white"
             app:boxStrokeColor="@color/white"
             app:boxStrokeWidthFocused="2dp"
-            app:startIconDrawable="@drawable/ic_eye_close"
-            app:startIconTint="@color/white">
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/outline_visibility_off_24"
+            app:endIconTint="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edtPassword"
@@ -99,8 +98,8 @@
             android:layout_height="55dp"
             android:text="Login"
             android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:backgroundTint="#FA8523"
+            android:textColor="@color/gray"
+            android:backgroundTint="@color/bg_red"
             android:enabled="false"
             android:alpha="0.4"
             android:layout_marginTop="20dp"/>
@@ -116,9 +115,11 @@
         android:textColor="#9EA1A1"
         android:textSize="16sp"
         android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/containerFields"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
